[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/LabelButton.gd" type="Script" id=2]

[node name="LabelButton" type="Node2D"]
script = ExtResource( 2 )
buttonScale = 1
buttonLabel = "Change profile"

[node name="Back" type="ColorRect" parent="."]
visible = false
margin_left = -80.0
margin_right = 80.0
margin_bottom = 27.0
color = Color( 0.462745, 0.517647, 0.282353, 1 )

[node name="Back2" type="ColorRect" parent="Back"]
margin_left = 1.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 26.0
color = Color( 0.141176, 0.192157, 0.215686, 1 )

[node name="Label" type="Label" parent="."]
margin_left = -24.0
margin_right = 24.0
margin_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.807843, 0.858824, 0.882353, 1 )
text = "Change profile"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -80.0
margin_right = 80.0
margin_bottom = 27.0

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
